<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/POscan"
    android:background="@drawable/appbackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan1"
        android:layout_marginTop="20dp"
        android:text="Purchase Order"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18dp"
        android:id="@+id/POhead"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:visibility="visible"/>
    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/POhead"
        android:layout_marginTop="10dp"
        android:background="@color/verygrey"
        android:visibility="gone"
        android:id="@+id/searchview_pms"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="55dp">

    </SearchView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PO_lay"
        android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_below="@id/searchview_pms"
        android:layout_marginLeft="@dimen/m_qr_val_mleft"
        android:layout_marginRight="@dimen/m_qr_val_mleft"
        android:layout_marginTop="@dimen/m_qr_val_mtop"
        android:layout_weight="0.84">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/m_qr_val_txt"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/m_qr_val_pad"
            android:paddingRight="@dimen/m_qr_val_pad"
            android:paddingTop="@dimen/m_qr_val_pad"
            android:paddingBottom="@dimen/m_qr_val_pad"
            android:id="@+id/text_PO"
            android:visibility="visible"
            android:background="@drawable/backend"/>
    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PO_button"
        android:layout_below="@+id/PO_lay"
        android:background="@color/app_blue"
        android:gravity="right">
        <ImageView
            android:id="@+id/img_save"
            android:layout_width="@dimen/h_wt"
            android:layout_height="@dimen/h_ht"
            android:src="@drawable/save" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/PO_button"
        android:id="@+id/POlistlay"
        android:layout_above="@+id/frame_layout"
        android:weightSum="1">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:id="@+id/POlist"
        android:divider="@color/app_blue"
        android:background="@color/white"
        android:dividerHeight="1dp"
        android:longClickable="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:visibility="visible">
    </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frame_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">


        <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:id="@+id/pms_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_inv1"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/inv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_inv1"
                        android:layout_centerInParent="true"
                        android:layout_weight="1"
                        android:text="@string/c_s_pms"
                        android:textColor="@color/black"
                        android:id="@+id/pmslist_text"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Pms_list_inv"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_pur1"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/purchase" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_pur1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:id="@+id/inv_text"
                        android:text="@string/c_s_inv"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/purchase_lay"
                    android:visibility="gone"
                    android:layout_marginLeft="5dp">

                    <ImageView
                        android:id="@+id/img_crw11"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/crew" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pur_text"
                        android:layout_below="@id/img_crw11"
                        android:layout_centerInParent="true"
                        android:layout_weight="1"
                        android:text="@string/c_s_crew"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/repair_lay"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_trn1"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/training" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_trn1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:text="@string/c_s_train"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/finance_lay"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_alm1"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/alarm" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_alm1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:text="@string/c_s_cali"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/safety_lay"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_cal1"
                        android:layout_width="@dimen/h_wt"
                        android:layout_height="@dimen/h_ht"
                        android:src="@drawable/calibration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_cal1"
                        android:layout_centerInParent="true"
                        android:layout_weight="1"
                        android:text="@string/c_s_safety"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/c_imgtext" />
                </RelativeLayout>


            </LinearLayout>

        </HorizontalScrollView>
    </LinearLayout>



</RelativeLayout>
